=== HEAD

* Add validate_associated plugin, for validating associated objects when validating the current object (jeremyevans)

* Make Postgres::JSONBOp#[] and #get_text return JSONBOp instances (jeremyevans) (#1005)

* Remove the fdbsql, jdbc/fdbsql, and openbase adapters (jeremyevans)

* Database#transaction now returns block return value if :rollback=>:always is used (jeremyevans)

* Allow postgresql:// connection strings as aliases to postgres://, for compatibility with libpq (jeremyevans) (#1004)

* Make Model#move_to in the list plugin handle out-of-range targets without raising an exception (jeremyevans) (#1003)

* Make Database#add_named_conversion_proc on PostgreSQL handle conversion procs for enum types (celsworth) (#1002)

=== 4.22.0 (2015-05-01)

* Deprecate the db2, dbi, fdbsql, firebird, jdbc/fdbsql, informix, and openbase adapters (jeremyevans)

* Avoid hash allocations and rehashes (jeremyevans)

* Don't silently ignore :jdbc_properties Database option in jdbc adapter (jeremyevans)

* Make tree plugin set reciprocal association for children association correctly (lpil, jeremyevans) (#995)

* Add Sequel::MassAssignmentRestriction exception, raised for mass assignment errors in strict mode (jeremyevans) (#994)

* Handle ODBC::SQL_BIT type as boolean in the odbc adapter, fixing boolean handling on odbc/mssql (jrgns) (#993)

* Make :auto_validations plugin check :default entry instead of :ruby_default entry for checking existence of default value (jeremyevans) (#990)

* Adapters should now set :default schema option to nil when adapter can determine that the value is nil (jeremyevans)

* Do not add a schema :max_length entry for a varchar(max) column on MSSQL (jeremyevans)

* Allow :default value for PostgreSQL array columns to be a ruby array when using the pg_array extension (jeremyevans) (#989)

* Add csv_serializer plugin for serializing model objects to and from csv (bjmllr, jeremyevans) (#988)
